--- a/scss/_shame.scss
+++ b/scss/_shame.scss
@@ -11,7 +11,6 @@
     position: fixed;
     z-index: 0;
     top: 0;
-
   }
 
 }
@@ -19,30 +18,7 @@
 @media screen and (min-width: 90em) {
   .wrapper--video {
     .video {
-      background: blue;
+      top: -240px;
     }
-    &:after {
-      display: block;
-      position: absolute;
-      z-index: 9997;
-      top: 0;
-      right: 0;
-      height: 100%;
-      width: 30%;
-      content:' ';
-      background: linear-gradient();
-    }
-    &:before {
-      display: block;
-      position: absolute;
-      z-index: 9998;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 30%;
-      content:' ';
-      background: blue;
-    }
-
   }
 }
