--- a/scss/layout/_l-herobanner.scss
+++ b/scss/layout/_l-herobanner.scss
@@ -32,8 +32,12 @@ body {
 
         .l-herobanner--title {
           color: $white;
-          font-size: 2.500rem;
-          margin-bottom: 2.500rem;
+          font-size: 3rem;
+          font-weight: 600;
+          margin-bottom: 3rem;
+          letter-spacing: 3.43px;
+          line-height: 4.5rem;
+          text-transform: uppercase;
         }
 
         p {
